[tool.poetry]
name = "boardgame-app"
version = "0.1.0"
description = ""
authors = ["Jagoda Janowska"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pydantic = "^2.5.1"
fastapi = "^0.104.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
